src/scss/styles.scss
@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
$black: #69665c;
$grey: #b2afa1;
$yellow: #fdf9de;
$white: #fff;
$blue: #d1e5f7;
$green: #daf2d6;
$red: #ffcece;
$purple: #d2ceff;

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Ubuntu', sans-serif;
}

/* XL devices (default) */

.app-container {
  width: 92%;
  max-width: 1150px;
  margin: 90px auto;
}

.navbar {
  width: 92vw;
  max-width: 1150px;
  display: flex;
  justify-content: space-between;
  padding: 10px 0 20px;
  margin-bottom: 35px;
  position: fixed;
  top: 0;
  background-color: white;
  z-index: 10;
}

.nav-logo {
  color: $black;
  font-size: 34px;
  font-weight: 500;
}

.add-todo-btn {
  background: none;
  border: none;
  cursor: pointer;
}

.add-todo-btn-svg {
  fill: $black;
  width: 32px;
  height: 32px;
}

.main-container {
  display: flex;
}

.categories-container {
  min-width: 225px;
  max-width: 250px;
  width: auto;
  height: auto;
  position: sticky;
  top: 90px;
  align-self: flex-start;
}

.category {
  margin-bottom: 35px;
  display: flex;
  align-items: center;
}

.category-btn {
  display: flex;
  align-items: center;
  cursor: pointer;
  border: none;
  background: none;
}

.category-title {
  color: $black;
  margin-left: 10px;
  font-size: 15px;
  font-weight: 500;
}

.dot {
  height: 30px;
  width: 30px;
  border-radius: 50%;
  display: inline-block;
}

.dot-all {
  background-color: $black;
}

.dot1 {
  background-color: $purple;
}

.dot2 {
  background-color: $blue;
}

.dot3 {
  background-color: $red;
}

.dot4 {
  background-color: $green;
}

.option {
  margin-bottom: 25px;
  display: flex;
  align-items: center;
}

.option:nth-last-of-type(2) {
  margin-top: 40px;
}

.options-btn {
  display: flex;
  align-items: center;
  cursor: pointer;
  border: none;
  background: none;
}

.options-title {
  color: $black;
  margin-left: 10px;
  font-size: 14px;
  font-weight: 400;
}

.options-svg {
  height: 24px;
  width: 24px;
  fill: $black;
}

.arrow-btn {
  display: none;
}

.todos-container {
  width: 100%;
  display: grid;
  grid-template-columns: 50% 50%;
  grid-template-rows: auto;
}

.todo {
  background-color: $yellow;
  width: 95%;
  margin: 0 auto 20px;
  border-radius: 3px;
  height: auto;
  position: relative;
}

.todo-options {
  width: 140px;
  height: 75px;
  border: 1px solid $grey;
  background-color: $white;
  position: absolute;
  top: 45px;
  right: 20px;
  border-radius: 5px;
  display: flex;
  flex-direction: column;
}

.todo-options-btn {
  height: 50%;
  border: none;
  background: none;
  border-bottom: 1px solid $grey;
  cursor: pointer;
  color: $black;
  text-align: start;
  padding-left: 20px;
}

.todo-content {
  width: 100%;
  height: 100%;
  padding: 20px;
}

.todo-heading {
  display: flex;
  justify-content: space-between;
}

.todo-title {
  color: $black;
}

.todo-menu-btn {
  background: none;
  border: none;
  cursor: pointer;
  fill: $black;
}

.todo-meatball {
  width: 30px;
  height: 19px;
}

.todo-paragraph {
  margin: 15px 0 20px;
  color: $black;
}

.todo-footer {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

/* Large devices */
@media only screen and (max-width: 1199.98px) {
  /* ...code... */
}

/* Medium devices */
@media only screen and (max-width: 991.98px) {
  .todos-container {
    grid-template-columns: 100%;
  }
}

/* Small devices */
@media only screen and (max-width: 767.98px) {
  .app-container {
    margin-top: 140px;
  }

  .main-container {
    flex-direction: column;
  }

  .categories-container {
    width: 92%;
    overflow-x: auto;
    height: auto;
    display: flex;
    max-width: none;
    position: fixed;
    top: 50px;
    background-color: $white;
    z-index: 11;
    padding: 0 30px;
  }

  .category {
    margin: 20px auto;
    display: flex;
    align-items: center;
  }

  .options {
    width: 92vw;
    position: fixed;
    left: 50%;
    transform: translateX(-50%);
    bottom: 0;
    display: flex;
    justify-content: space-around;
    background-color: $white;
  }

  .option {
    margin: 0;
    display: flex;
    align-items: center;
  }

  .option:nth-last-of-type(2) {
    margin-top: 0;
  }

  .options-btn {
    display: flex;
    align-items: center;
    cursor: pointer;
    border: none;
    background: none;
    padding: 20px 0;
  }

  .arrow-btn {
    display: flex;
    align-items: center;
    cursor: pointer;
    border: none;
    background: $white;
    position: fixed;
    border-radius: 5px;
    padding: 5px;
  }

  .left-arrow-btn {
    top: 68px;
    left: 7px;
    transform: rotate(180deg);
  }

  .right-arrow-btn {
    top: 68px;
    right: 7px;
  }

  .arrow {
    width: 24px;
    height: 24px;
    fill: $black;
  }

  .category-title {
    margin-right: 10px;
  }
}

